Changes after KOffice-1.4-beta1
===============================
KOfficeCore:
- Create backup file faster for local files

Changes after KOffice-1.3
=========================
KOfficeUI:
- Fix overwriting of templates (#73537)
- Fix loading of icons when creating templates
- Allow template icons up to 64x64 instead of 60x60 and scale better if too big

KOfficeCore:
- Support MS-DOS EPS files directly without stripping them internally.
- Add new info in document properties (Subject/Keywords/home-work phone)

KoText:
- Add new variable (statistic, Subject/Keywords/home-work phone/Position)

Changes after KOffice-1.3-rc1
=============================
KOfficeCore:
- Fixed doc/window association which led to closing all windows when closing only one.

KoText:
- Fixed rare crash when applying a format to a selection
- Fixed painting bug in text view mode (the right side was being erased).
- Fixed saving of left-to-right direction in RTL paragraphs

KOSpell:
- Fixed bug where the dialog wouldn't show the spell client from the config file

Changes after KOffice-1.3-beta4
===============================
KOfficeCore:
- Restart autosave timer when saving
- Fixes for remote documents (authentication dialog not on top, error handling)
- Restore ability to detect documents without extension (was broken by KDE-3.2-alpha's KZip)
KOSpell:
- Many stability fixes
KoText:
- Fixed missed hit during search-replace backwards with a single paragraph

Changes after KOffice-1.3-beta3
===============================
KOfficeCore:
- Fixed saving of the window size when closing
- Cache the configuration object around kofficerc, to improve startup performance
KoText:
- Improve hierarchical numbering - doesn't require using a suffix of '.' anymore,
and doesn't copy over the prefix and suffix from parent levels anymore (#40911).
- PgUp/PgDown works better than before when "move the caret" is enabled (#45246)
- Fixed painting of non-breakable-spaces (could show up as a visible square)